fixed integration test